--- a/.htaccess
+++ b/.htaccess
@@ -3,8 +3,7 @@
     RewriteCond %{REQUEST_FILENAME} -f [OR]
     RewriteCond %{REQUEST_FILENAME} -d
 
-
     RewriteRule \.(?:css|js|jpe?g|gif|png)$ - [L]
-    RewriteRule ^api/(.*)/?$ router.php?resource=$1 [QSA,L]
-    
+    RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
+    RewriteRule ^api/(.*)$ router.php?resource=$1 [QSA,L]
 </IfModule>
